--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -103,11 +103,12 @@ Button {
   font-family : 'Vollkorn', serif;
   margin: 4px 2px;
   cursor: pointer;
+  border: 2px solid #df9a2a;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
 
 Button:hover{
-  background-color : #2375a8;
+  background-color : #083b61;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
