--- a/src/components/about.css
+++ b/src/components/about.css
@@ -27,6 +27,7 @@
     background-size: auto 100%;
 }
 .about-section-heading{
+    text-align : center;
     font-size: 2.3rem;
     font-weight: 700;
 }
@@ -42,7 +43,7 @@
     transition: 0.3s;
     cursor: pointer;
     border: 2px solid #df9a2a;
-    background-color: #323848;
+    background-color: #083b61;
     color: white;
 }
 .about-section-text-btn:hover{
