--- a/src/components/mainheader.css
+++ b/src/components/mainheader.css
@@ -1,5 +1,5 @@
 .lawyer-hero{
-    background-image : url(../img/1-banner.jpg);
+    background-image : linear-gradient(268deg,rgb(0 0 0 / 100%) 0%, rgb(0 0 0 / 0%) 30%) ,url(../img/1-banner.jpg);
     display: flex;
     flex-direction: row;
     padding-bottom: 0px;
@@ -31,7 +31,7 @@
     padding-bottom: 15px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #323848;
+    background-color: #083b61;
     color: white;
     cursor: pointer;
     transition: 0.3s;
@@ -51,6 +51,7 @@
     flex: 1;
 }
 .lawyer-hero-section-3-points{
+    font-weight : 600;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,11 +72,11 @@
     width: 50px;
 }
 .icon-text-heading{
-    font-size: 14px;
+    font-size: 1.5rem;
     color: #0d0808;
 }
 .icon-text-sub-heading{
-    font-size: 16px;
+    font-size: 1rem;
     color: #0d0808;
-    font-weight: 550;
+    font-weight: 650;
 }
