--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,10 +1,4 @@
-a:hover {
-    color : black;
-    font-weight : bolder;
-    text-decoration : underline;
-    padding : 5px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
+
 a {
    color: #000000e8;
    text-decoration: none;	
@@ -67,8 +61,10 @@ a {
     font-size: 1.8rem;
     cursor: pointer;
 }
-.items:hover{
-    transition-duration: 1s;
+.nav-a:hover{
+    text-decoration : underline;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    
 }
 @media only screen and (max-width: 768px) 
 {
