--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,22 +1,22 @@
 .footer {
   text-align: center;
   background-image: url('../img/footer-bkg.jpg');
-  padding-bottom : 10px;
-  padding-top : 30px;
+  padding-bottom : 2rem;
+  padding-top : 2.0rem;
 }
 .footer-div {
   display: inline-block;
-  padding-top: 40px;
-  padding-right: 30px;
-  padding-bottom: 40px;
-  padding-left: 30px;
+  padding-top: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 2.5rem;
+  padding-left: 1.8rem;
   box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
   background : transparent;
   background-color: rgba(255,255,255,0.75);
 }
 
 img {
-   width : 25px;
-   height : 25px;
-   padding : 10px;
+   width : 1.5rem;
+   height : 1.5rem;
+   padding : 0.5rem;
 }
