--- a/src/components/mainheader.css
+++ b/src/components/mainheader.css
@@ -3,34 +3,34 @@
     display: flex;
     flex-direction: row;
     padding-bottom: 0px;
-    height: 550px;
+    height: 34.5rem;
 }
 .lawyer-hero-section-1{
     flex: 1;
-    padding-left: 80px;
+    padding-left: 7rem;
     /* display: flex;
     flex-direction: column; */
 }
 .lawyer-hero-section-1-heading{
-    margin-top: 90px;
-    margin-bottom: 30px;
-    font-size: 25px;
+    margin-top: 7rem;
+    margin-bottom: 2rem;
+    font-size: 2rem;
     text-align: left;
 }
 .lawyer-hero-section-1-sub-heading{
-    font-size: 18px;
+    font-size: 1.4rem;
     text-align: left;
     font-weight : 800;
     color: #101e24;
-    margin-bottom: 80px;
+    margin-bottom: 2rem;
 }
 .lawyer-hero-section-1-btn{
     display: block;
     border: 1px solid #df9a2a;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
     background-color: #083b61;
     color: white;
     cursor: pointer;
@@ -59,17 +59,17 @@
 }
 .lawyer-hero-section-2-img{
     width: 100%;
-    height: 537px;
+    height: 33.5rem;
 }
 .point{
     display: flex;
     flex-direction: row;
     text-align: left;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 1.8rem;
+    margin-bottom: 1.8rem;
 }
 .point-img{
-    width: 50px;
+    width: 8rem;
 }
 .icon-text-heading{
     font-size: 1.5rem;
