--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,4 +1,3 @@
-
 a {
    color: #000000e8;
    text-decoration: none;	
@@ -6,58 +5,58 @@ a {
 }
 .navbar{
     display: flex;
-    height: 80px;
+    height: 7rem;
     top: 0;
     left: 0;
-    padding-bottom : 50px;
+    padding-bottom : 4rem;
     z-index: 9999;
     align-items: center;
 }
 .law-icon{
-    width: 350px;
-    height: 110px;
-    margin-left: 70px;
+    width: 22rem;
+    height: 7rem;
+    margin-left: 5rem;
     margin-top : 15%;
 }
 .navbar-icon{
     flex: 1;
     display: flex;
     align-items : center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin-left: 0rem;
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
 }
 .menu-items{
     flex : 1.5;
     display: flex;
     justify-content: space-evenly;
     list-style: none;
-    margin-right: 10px;
+    margin-right: 1.8rem;
     font-weight: 500;
     top : 100%;
     transform : translateY(50%);
 }
 .navbar-text{
-    margin-left: 5px;
+    margin-left: 0.5rem;
     font-size: 2rem;
 }
 .items-active{
     color: rgb(223, 154, 42);;
-    padding: 10px 15px;
-    border-top-right-radius: 12px;
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    padding: 0.5rem 0.9rem;
+    border-top-right-radius: 1.7rem;
+    border-top-left-radius: 1.7rem;
+    border-bottom-left-radius: 1.7rem;
+    border-bottom-right-radius: 1.7rem;
     font-size: 1.8rem;
     cursor: pointer;
 }
 .items{
     color: white;
-    padding: 10px 15px;
-    border-top-right-radius: 12px;
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    padding: 0.5rem 0.9rem;
+    border-top-right-radius: 1.7rem;
+    border-top-left-radius: 1.7rem;
+    border-bottom-left-radius: 1.7rem;
+    border-bottom-right-radius: 1.7rem;
     font-size: 1.8rem;
     cursor: pointer;
 }
